# dynamics_pipeline_v2

./: README.md  __init__.py  env.yml  libtiff_setup.sh  mission_control.py  old_README.md  r_pkg_setup.sh  submit_node.sh  tail_curr_jobs.sh  uv_requirements.txt
background/: operations.py  parameters.py
conversion/: operations.py  parameters.py
dypi_env/: main.py  pyproject.toml  requirements.txt
ligand/: __init__.py  get_density.R  operations.py  parameters.py  run_trackmate.ijm
my_pipe/: main.py  pyproject.toml  requirements.txt
parameter_tables/: constants.csv  dark_frames.csv  directories.csv  exclusion_channels.csv  flat_fields.csv  images.csv  ligand.csv
r_scripts/: _colocalization.R  _compile_tables.R  _extract_intensity.R  colocalization.R  compile_tables.R  compress_everything.R  extract_intensity.R
segmentation/: operations.py  parameters.py
settings/: global_variables.py  parallel.py
slurm_reports/: job.err.21390173  job.err.21390410  job.out.21390173  job.out.21390410
track/: operations.py  parameters.py  run_trackmate.ijm
