[project]
name = "dypi_env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
    "aioredis>=2.0.1",
    "appdirs>=1.4.4",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "blessings>=1.7",
    "boto3>=1.40.17",
    "botocore>=1.40.17",
    "cachetools>=6.2.0",
    "certifi>=2025.8.3",
    "chardet>=5.2.0",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "colorful>=0.5.7",
    "cycler>=0.12.1",
    "decorator>=5.2.1",
    "distlib>=0.4.0",
    "et-xmlfile>=2.0.0",
    "filelock>=3.19.1",
    "future>=1.0.0",
    "glib>=1.0.0",
    "google-api-core>=1.16.0",
    "google-auth>=1.6.3",
    "googleapis-common-protos>=1.70.0",
    "gpustat>=1.1.1",
    "grpcio>=1.74.0",
    "hiredis>=3.2.1",
    "idna>=3.10",
    "imagecodecs>=2025.8.2",
    "imageio>=2.37.0",
    "imglyb>=2.1.0",
    "jgo>=1.0.6",
    "jmespath>=1.0.1",
    "jpype1>=1.6.0",
    "jsonschema>=4.25.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.5",
    "msgpack>=1.1.1",
    "multidict>=6.6.4",
    "nd2reader>=3.3.1",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "nvidia-ml-py3>=7.352.0",
    "opencensus>=0.11.4",
    "opencensus-context>=0.1.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pims>=0.7",
    "pims-nd2>=1.1",
    "pipenv>=2025.0.4",
    "prometheus-client>=0.22.1",
    "protobuf>=6.32.0",
    "psutil>=7.0.0",
    "py-spy>=0.4.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyparsing>=3.2.3",
    "pyrsistent>=0.20.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pywavelets>=1.9.0",
    "pyyaml>=6.0.2",
    "ray>=2.48.0",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "s3transfer>=0.13.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "scyjava>=1.12.1",
    "six>=1.17.0",
    "slicerator>=1.1.0",
    "tifffile>=2025.6.11",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "virtualenv>=20.34.0",
    "virtualenv-clone>=0.5.7",
    "xarray>=2025.8.0",
    "xlrd>=2.0.2",
    "xmltodict>=0.14.2",
    "yarl>=1.20.1",
]
